--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -73,3 +73,11 @@
       </tbody>
     </table>
   </div>
+  <!-- <div class="container">
+    <div class="row">
+      <ag-grid-angular
+      [rowData]="gridData"
+      [columnDefs]="colDefs">
+    </ag-grid-angular>
+    </div>
+  </div> -->
